<resources>
    <string name="app_name">VehiclesList</string>
    <string name="cars_name">Brand*</string>
    <string name="cars_model">Model*</string>
    <string name="age">Age of production*</string>
    <string name="type_cars">Types</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="undo">undo</string>
    <string name="Ok">Ok</string>
    <string name="add">Add</string>
    <string name="setMenu">Settings</string>
    <string name="fuel">Fuel type </string>
    <string name="chilometer">Total chilometer* </string>
    <string name="license_plate">Plate* </string>
    <string name="displacement">Displacement* </string>
    <string name="unit_cil">cm^3</string>
    <string name="unit_km">km</string>
    <string name="modelInf">Model:</string>
    <string name="plateInf">Plate:</string>
    <string name="channel_name">car_channel</string>
    <string name="channel_description">car_reminder</string>
    <string name="age_displac_check">Generic error</string>
    <string name="name_error">Insert a valid value for "Brand""</string>
    <string name="model_error">"Insert a valid value for "Model""</string>
    <string name="age_error">"Insert a valid value for "Age of production""</string>
    <string name="chilometer_error">"Insert a valid value for "Total chilometer""</string>
    <string name="plate_error">"Insert a valid value for "License plate""</string>
    <string name="plate_warning">"Insert a valid value for "License plate" in format AB123CD"</string>
    <string name="vehicles_warning">There\'s no vehicles here :(</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_add">Confirm Add</string>
    <string name="delete_text">Are you sure you want to delete this car?</string>
    <string name="confirm_text">Are you sure you want to add this car?</string>
    <string name="displacement_error">"Insert a valid value for "Displacement""</string>
    <string name="optional">"Optional info"</string>
    <string name="no_internet">"Check your internet connection and retry again :c"</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>